# atom

./: .gitignore  CMakeLists.txt  README.md
examples/: rc_usage.cpp  safe_mutex_usage.cpp  sync_usage.cpp
include/concurrency/: owner.h  safe_mutex.h  sync.h
include/concurrency/async/: future.h
include/utils/: any.h  assertion.h  functor.h  lazy.h  result.h  scoped_lock.h  stage_controller.h
src/: safe_mutex.cpp
test/units/: test_any.cpp  test_functor.cpp  test_future.cpp  test_lazy.cpp  test_owner.cpp  test_safe_mutex.cpp  test_sync.cpp
